--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,29 +1,17 @@
-body {
-  background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
+/* wrapper */
+body{
+	width: 100%;
 }
-
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
+.wrapper{
+	width: 100%;
+	background-color: #fff;
 }
-
-.hero-unit h1 {
-  font-size: 60px;
-  line-height: 1;
-  letter-spacing: -1px;
+.test-wrap{
+	width: 100%;
 }
-
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+.test-wrap > span{
+	display: inline-block;
+	width: 14%;
+	text-align: center;
+	font-size: 0.18rem;
 }
